# delphyne

./: .gitignore  404.html  CHANGELOG.md  CITATION.bib  LICENSE  Makefile  README.md  build.sh  clean.sh  index.html  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  versions.json
examples/find_invariants/: .gitignore  Makefile  README.md  abduct_and_branch.demo.yaml  abduct_and_branch.py  abduct_and_saturate.demo.yaml  abduct_and_saturate.py  baseline.demo.yaml  baseline.py  delphyne.yaml  find_invariants.demo.yaml  find_invariants.py  invariant_saturation.demo.yaml  invariant_saturation.py  one_guess_baseline.py  pyproject.toml  why3_utils.py
examples/find_invariants/benchmarks/code2inv/: README.md  deduplicated.txt  wrong.txt
examples/find_invariants/benchmarks/code2inv/mlw/: 1.mlw  10.mlw  100.mlw  101.mlw  102.mlw  103.mlw  104.mlw  105.mlw  106.mlw  107.mlw  108.mlw  109.mlw  11.mlw  110.mlw  111.mlw  112.mlw  113.mlw  114.mlw  115.mlw  116.mlw  117.mlw  118.mlw  119.mlw  12.mlw  120.mlw  121.mlw  122.mlw  123.mlw  124.mlw  125.mlw  126.mlw  127.mlw  128.mlw  129.mlw  13.mlw  130.mlw  131.mlw  132.mlw  133.mlw  14.mlw  (+93 more)
examples/find_invariants/commands/: demo_baseline_simple.yaml  problem_10.yaml  standard_demo.yaml  standard_demo_nolinear.yaml  standard_fail_y_nonneg.yaml  test_abduct_branch.exec.yaml  test_abduct_branch.yaml  test_abduct_branch_difficult.exec.yaml  test_abduct_branch_difficult.yaml  test_abduct_repeated_recursive_simple.exec.yaml  test_abduct_saturate_difficult.exec.yaml  test_abduct_saturate_difficult.yaml  test_abduct_saturate_simple.exec.yaml  test_abduct_saturate_simple.yaml  test_baseline_difficult.exec.yaml  test_iterative.yaml  test_saturation_difficult.yaml  test_saturation_simple.yaml
examples/find_invariants/commands/cache/: test_abduct_branch.exec.yaml  test_abduct_repeated_recursive_simple.exec.yaml  test_abduct_saturate_difficult.exec.yaml  test_abduct_saturate_simple.exec.yaml  test_baseline_difficult.exec.yaml
examples/find_invariants/commands/cache/test_abduct_branch.exec/: cache.db
examples/find_invariants/commands/cache/test_abduct_saturate_difficult.exec/: cache.db
examples/find_invariants/commands/cache/test_abduct_saturate_simple.exec/: cache.db
examples/find_invariants/commands/cache/test_baseline_difficult.exec/: cache.db
examples/find_invariants/commands/traces/: test_iterative_difficult_trace.yaml
examples/find_invariants/experiments/: Makefile  README.md  abduction_experiment.py  baseline_experiment.py  code2inv.py  code2inv_experiments.py  run.py  test_abduction_experiment.py  test_baseline_experiment.py  test_ensemble_experiment.py  test_experiment.py
examples/find_invariants/experiments/analysis/: analysis.py
examples/find_invariants/experiments/analysis/data/: abduction.csv  baseline.csv
examples/find_invariants/experiments/test-output/test_abduction_experiment/: experiment.yaml  results_summary.csv
examples/find_invariants/prompts/: AnnotateWithInvs.feedback.jinja  AnnotateWithInvs.instance.jinja  AnnotateWithInvs.system.jinja  EvaluateProofState.instance.jinja  EvaluateProofState.system.jinja  EvaluateProposal.instance.jinja  EvaluateProposal.system.jinja  IsProposalNovel.instance.jinja  IsProposalNovel.system.jinja  ProposeChange.instance.jinja  ProposeChange.system.jinja  ProposeChange.system.md.jinja  ProposeInvariants.instance.jinja  ProposeInvariants.system.jinja  SuggestInvariants.instance.jinja  SuggestInvariants.system.jinja
examples/find_invariants/prompts/shared/: intro.jinja  lin_only.jinja
examples/find_invariants/tests/: test_why3_utils.py
examples/leandra/: .gitignore  Makefile  README.md  delphyne.yaml  pyproject.toml
examples/leandra/benchmarks/minif2f/: .gitignore  Makefile  README.md  lakefile.toml
examples/leandra/commands/: .gitignore  finish_mathd_algebra_451.exec.yaml  prove_amc12b_2003_p17.exec.yaml  test_find_theorems.exec.yaml
examples/leandra/commands/cache/: finish_mathd_algebra_451.exec.yaml
examples/leandra/data/: ProveGoal_tips.data.yaml  SketchProof_tips.data.yaml  tactics.data.yaml
examples/leandra/demos/: prove_theorems.demo.yaml  test_feedback_based_generation.demo.yaml
examples/leandra/experiments/: learning_experiments.py  main_experiment.py  minif2f.py  test_experiment.py  test_run.py
examples/leandra/experiments/analysis/: .gitignore  analyze.py
examples/leandra/experiments/find_theorems/: test_find_theorems.py  tests.yaml
examples/leandra/prompts/: ProveGoal.feedback.jinja
examples/leandra/prompts/learner/: GenerateProofTip.instance.jinja  GenerateProofTip.system.jinja  GenerateSketchTip.instance.jinja  GenerateSketchTip.system.jinja  SummarizeTips.instance.jinja  SummarizeTips.system.jinja
examples/leandra/prompts/solver/: FindTheorem.feedback.jinja  FindTheorem.instance.jinja  FindTheorem.system.jinja  ProveGoal.embed_example.jinja  ProveGoal.embed_query.jinja  ProveGoal.feedback.jinja  ProveGoal.instance.jinja  ProveGoal.system.jinja  SketchProof.embed_example.jinja  SketchProof.embed_query.jinja  SketchProof.feedback.jinja  SketchProof.instance.jinja  SketchProof.system.jinja
examples/leandra/src/leandra/: dsl.py  find_theorems.py  learning.py  loogle_utils.py  prove_theorems.py  tools.py
examples/leandra/tests/: test_dsl.py
examples/libraries/why3py/: .gitignore  Makefile  README.md  clean.sh  pyproject.toml  setup.py
examples/libraries/why3py/ocaml/: dune-project  why3py.opam
examples/libraries/why3py/tests/: test_diff.py  test_locations.py  test_prove.py  test_simple.py  utils.py
examples/mini_eqns/: Makefile  README.md  baseline.demo.yaml  baseline_strategy.py  checker.py  delphyne.yaml  prover.py  pyproject.toml  test_checker.py
examples/mini_eqns/commands/: test_baseline_simple.exec.yaml  test_baseline_simple.yaml
examples/mini_eqns/commands/cache/: test_baseline_simple.exec.yaml
examples/mini_eqns/prompts/: ProveEqualityAtOnce.instance.jinja  ProveEqualityAtOnce.repair.jinja  ProveEqualityAtOnce.system.jinja  ProveEqualityAtOnce.system.md.jinja
examples/mini_eqns/proofs/: cos_sin_sq.yaml
(+1205 files in other folders)
