[project]
name = "delphyne"
version = "0.1.0"
description = ""
authors = [{name="Jonathan Laurent", email="jonathan.laurent@cs.cmu.edu"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"delphyne" = ["py.typed"]


[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2

[tool.black]
line-length = 79

[tool.pyright]
typeCheckingMode = "strict"
include = ["src/**", "tests/**"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"