[project]
name = "delphyne"
version = "0.2.0"
description = ""
authors = [{name="Jonathan Laurent", email="jonathan.laurent@cs.cmu.edu"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "Jinja2>=3.1",
    "numpy>=2.0",
    "openai>=1.40",
    "parsy>=2.1",
    "pyaml>=24.4",
    "pyyaml>=6.0",
    "pydantic>=2.8",
    "pytest>=8.2",
    "setuptools>=68.2",
    "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"delphyne" = ["py.typed"]


# [tool.isort]
# profile = "black"
# line_length = 79
# lines_after_imports = 2

# [tool.black]
# line-length = 79

[tool.ruff]
line-length = 79

# Currently tested with pyright==1.1.400
[tool.pyright]
typeCheckingMode = "strict"
include = ["src/**", "tests/**"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"