[project]
name = "delphyne"
version = "0.7.0"
description = ""
authors = [{name="Jonathan Laurent", email="jonathan.laurent@cs.cmu.edu"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "Jinja2>=3.1",
    "numpy>=2.0",
    "openai>=1.99",
    "parsy>=2.1",
    "pyyaml>=6.0",
    "pydantic>=2.8",
    "pytest>=8.2",
    "setuptools>=68.2",
    "uvicorn>=0.30",
    "fire>=0.7.0"
]

# Install the `delphyne` CLI
[project.scripts]
delphyne = "delphyne.__main__:main"

# Use setuptools for packaging
# setuptools-scm uses git information to
# automatically include package data.
[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# We do not use black since it does not handle PEP 695
# type parameters very well yet.
# [tool.isort]
# profile = "black"
# line_length = 79
# lines_after_imports = 2
# [tool.black]
# line-length = 79

# Formatting with ruff
[tool.ruff]
line-length = 79

# Currently tested with pyright==1.1.403
[tool.pyright]
typeCheckingMode = "strict"
include = ["src/**", "tests/**"]