[project]
name = "delphyne-find-invariants-example"
version = "0.2.0"
description = "Using Delphyne and Why3 to find loop invariants"
authors = [{name="Jonathan Laurent", email="jonathan.laurent@cs.cmu.edu"}]
dependencies = [
    "delphyne>=0.2.0",
    "why3py>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"